--- a/packages/jaeger-ui/package.json
+++ b/packages/jaeger-ui/package.json
@@ -56,6 +56,7 @@
     "classnames": "^2.2.5",
     "combokeys": "^3.0.0",
     "copy-to-clipboard": "^3.1.0",
+    "cypress": "^7.1.0",
     "cytoscape": "^3.2.1",
     "cytoscape-dagre": "^2.0.0",
     "d3-scale": "^1.0.6",
