--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          project: ./packages/jaeger-ui
           start: yarn start
           # quote the url to be safe against YML parsing surprises
           wait-on: 'http://localhost:3000'
